- Fixes reCAPTCHA invisible badge which was getting hidden. - Uses $ij instead of @inject annotation to access inject data.
PiperOrigin-RevId: 200276295

--- a/stylesheet/firebase-ui.css
+++ b/stylesheet/firebase-ui.css
@@ -26,10 +26,16 @@
   font: 16px Roboto, arial, sans-serif;
   margin: 0 auto;
   max-width: 360px;
-  overflow: hidden;
+  /** This is needed for the invisible reCAPTCHA badge to show. */
+  overflow: visible;
   position: relative;
   text-align: left;
   width: 100%;
+}
+
+.firebaseui-container.mdl-card {
+  /** This is needed for the invisible reCAPTCHA badge to show. */
+  overflow: visible;
 }
 
 .firebaseui-card-header {
